# agent-task-slicer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.json  sample_prd.md
src/agent_task_slicer/: __init__.py  cli.py  config.py  errors.py  exporters.py  heuristics.py  models.py  parser.py  slicer.py
tests/: __init__.py  test_cli.py  test_config.py  test_exporters.py  test_parser.py  test_slicer.py
