[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-task-slicer"
version = "0.1.0"
description = "Slice large AI/developer tasks into agent-ready work packages."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "agent-task-slicer contributors"}
]
keywords = ["ai", "agent", "project-management", "developer-tools", "task-planning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yanqr213/agent-task-slicer"
Issues = "https://github.com/yanqr213/agent-task-slicer/issues"

[project.scripts]
agent-task-slicer = "agent_task_slicer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
